# vectorless-code

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: simplified-daemon-design.md
src/vectorless_code/: __init__.py  __main__.py  _runtime.py  _version.py  ask.py  ast_parser.py  cli.py  client.py  compile.py  daemon.py  daemon_client.py  daemon_paths.py  engine.py  file_discovery.py  fingerprint.py  protocol.py  raw_nodes.py  server.py  settings.py
src/vectorless_code/daemon/: __init__.py  core.py  protocol.py  server.py  watcher.py
tests/: test_ast_parser.py  test_basic.py  test_compile.py  test_daemon_paths.py  test_file_discovery.py  test_protocol.py  test_settings.py
