[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "vectorless-code"
version = "0.1.0"
description = "Code search and navigation engine powered by vectorless, without vector database."

readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "vectorless>=0.1.13",
    "click",
]

[project.optional-dependencies]
cli = [
    "rich",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[project.urls]
Homepage = "https://vectorless.dev/"
Repository = "https://github.com/vectorlessflow/vectorless-code"
