[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorless-code"
version = "0.1.0"
description = "Code search and navigation engine powered by vectorless, without vector database."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["code-search", "ast", "tree-sitter", "vectorless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "vectorless>=0.1.13",
    "typer>=0.9.0",
    "rich",
    "pyyaml>=6.0",
    "pathspec>=0.12.1",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
    "tree-sitter-ruby>=0.21",
    "tree-sitter-swift>=0.21",
    "tree-sitter-kotlin>=0.21",
    "tree-sitter-scala>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
vectorless-code = "vectorless_code:main"
vcc = "vectorless_code.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vectorless_code"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
files = ["src"]

[project.urls]
Homepage = "https://vectorless.dev/"
Repository = "https://github.com/vectorlessflow/vectorless-code"
